resolved overflow styling issues

--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -6,9 +6,15 @@
   box-sizing: border-box;
 }
 
+body, div, h1, p {
+  width: auto;
+  margin: 0;
+  padding: 0;
+}
+
 html, body {
   max-width: 100vw;
-  width: 100%;
+  width: 90vw;
 }
 
 body {
@@ -17,16 +23,13 @@ body {
   height: auto;
 }
 
-h1, p {
-  width: auto;
-}
-
 a {
   color: #00B7FF;
 }
 
 #timeline {
   max-width: 100%;
+  width: 90%;
   display: flex;
   position: absolute;
   flex-wrap: wrap;
